# bazel-go-test

./: .gitignore  BUILD.bazel  README.md  WORKSPACE  go.mod  go.sum
prometer-hello-world/: BUILD.bazel  build_and_deploy.sh  main.go  main.tf
